--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contracts</div>
             <div class="signup button"><a href="#">Sign up</a></div>
         </div>
-        <div class="right">
-            <div>this is a placeholder for an image</div>
+        <div class="right img">
+            <div><img src="steve-johnson-PsPHRqO9XFg-unsplash.jpg" alt="white cubes floating"></div>
         </div>
         </div>
     </div>
