--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+<div class="page-container">
+    <div class="content-wrap">
     <div class="header-hero">
         <div class="header content">
             <div class="header-logo">
@@ -30,7 +32,30 @@
         </div>
         </div>
     </div>
-    <div class="footer">Footer</div>
+    <div class="information content">
+        <div class="info-text">Some random information.</div>
+        <div class="features">
+            <div class="feature-box">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="feature-box">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="feature-box">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="feature-box">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
+</div>
 </body>
 
 </html>
