add quote and call to action sections

--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
 </head>
 
 <body>
-<div class="page-container">
-    <div class="content-wrap">
-    <div class="header-hero">
-        <div class="header content">
-            <div class="header-logo">
-                <a href="#">Header Logo</a>
+<header>
+    <div class="header content">
+        <div class="header-logo">
+            <a href="#">Header Logo</a>
+        </div>
+        <ul class="header-links">
+            <li><a href="#">Header Link 1</a></li>
+            <li><a href="#">Header Link 2</a></li>
+            <li><a href="#">Header Link 3</a></li>
+        </ul>
+    </div>
+</header>
+<main>
+    <div class="hero">
+        <div class="hero-content content">
+            <div class="left">
+                <div class="main-text">This website is awesome</div>
+                <div class="secondary">This website has some subtext that goes here under the main title. It's a
+                    smaller font and the color is lower contracts
+                </div>
+                <div class="signup button"><a href="#">Sign up</a></div>
             </div>
-            <ul class="header-links">
-                <li><a href="#">Header Link 1</a></li>
-                <li><a href="#">Header Link 2</a></li>
-                <li><a href="#">Header Link 3</a></li>
-            </ul>
-        </div>
-        <div class="hero content">
-        <div class="left">
-            <div class="main-text">This website is awesome</div>
-            <div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contracts</div>
-            <div class="signup button"><a href="#">Sign up</a></div>
-        </div>
-        <div class="right img">
-            <div><img src="steve-johnson-PsPHRqO9XFg-unsplash.jpg" alt="white cubes floating"></div>
-        </div>
+            <div class="right img">
+                <div><img src="steve-johnson-PsPHRqO9XFg-unsplash.jpg" alt="white cubes floating"></div>
+            </div>
         </div>
     </div>
     <div class="information content">
@@ -53,9 +56,36 @@
             </div>
         </div>
     </div>
+    <div class="quote">
+        <div class="content">
+            <blockquote>
+                <p class="quote-content">This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                    filling up space, or
+                    maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            </blockquote>
+            <p class="quote-attribution">
+                - Thor, God of Thunder
+            </p>
+        </div>
     </div>
-    <div class="footer">Copyright © The Odin Project 2021</div>
-</div>
+    <div class="call-to-action">
+        <div class="call-to-action-box content">
+            <div class="call-to-action-content">
+                <div class="call-to-action-text-box">
+                    <div class="main-text">Call to action! It's Time!</div>
+                    <div class="secondary">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="call-to-action-btn button">
+                    <a href="#">Sign Up</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+<footer>
+    Copyright © The Odin Project 2021
+</footer>
+
 </body>
 
 </html>
